--- a/PT_Assistant/res/layout/activity_create_patient.xml
+++ b/PT_Assistant/res/layout/activity_create_patient.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.pt_assistant.RecordCreatedActivity$PlaceholderFragment" >
+    tools:context="com.example.pt_assistant.RecordCreatedActivity$PlaceholderFragment" 
+    android:background="@drawable/custom_background">
 
     <TextView
         android:id="@+id/textView1"
@@ -21,7 +22,8 @@
         android:layout_alignParentTop="true"
         android:ems="10"
         android:hint="@string/patient_name"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        style="@style/PTFont.Dark" />
 
     <EditText
         android:id="@+id/editText_pid"
@@ -31,7 +33,8 @@
         android:layout_below="@+id/editText_name"
         android:ems="10"
         android:hint="@string/patient_ID"
-        android:inputType="number" />
+        android:inputType="number"
+        style="@style/PTFont.Dark" />
 
     <EditText
         android:id="@+id/editText_dob"
@@ -41,7 +44,8 @@
         android:layout_below="@+id/editText_pid"
         android:ems="10"
         android:hint="@string/birth_date"
-        android:inputType="date" />
+        android:inputType="date"
+        style="@style/PTFont.Dark" />
 
     <EditText
         android:id="@+id/editText_age"
@@ -51,7 +55,8 @@
         android:layout_below="@+id/editText_dob"
         android:ems="10"
         android:hint="@string/pat_age"
-        android:inputType="number" />
+        android:inputType="number"
+        style="@style/PTFont.Dark" />
 
     <EditText
         android:id="@+id/editText_injurycode"
@@ -61,7 +66,8 @@
         android:layout_below="@+id/editText_age"
         android:ems="10"
         android:hint="@string/injury_code"
-        android:inputType="number" />
+        android:inputType="number"
+        style="@style/PTFont.Dark" />
 
     <RadioGroup
         android:id="@+id/radioGroupSex"
@@ -75,13 +81,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="@string/radio_male" />
+            android:text="@string/radio_male"
+            style="@style/PTFont.Dark" />
 
         <RadioButton
             android:id="@+id/radioFemale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/radio_female" />
+            android:text="@string/radio_female"
+            style="@style/PTFont.Dark" />
     </RadioGroup>
 
     <Button
@@ -90,7 +98,10 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/radioGroupSex"
         android:layout_below="@+id/radioGroupSex"
+        android:layout_marginTop="@dimen/ptDimens"
+        android:background="@drawable/custom_button"
         android:onClick="Register"
-        android:text="Register Patient" />
+        android:text="Register Patient"
+        android:textAppearance="@style/PTFont.Dark" />
 
 </RelativeLayout>
