--- a/PT_Assistant/res/layout/activity_injury_lookup.xml
+++ b/PT_Assistant/res/layout/activity_injury_lookup.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.pt_assistant.InjuryLookupActivity" >
+    tools:context="com.example.pt_assistant.InjuryLookupActivity"
+    android:background="@drawable/custom_background" >
 
     <ListView
         android:id="@+id/injuryList"
@@ -14,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/backObjective"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+        android:layout_alignParentTop="true"
+        style="@style/PTFont.Dark" >
 
     </ListView>
 
@@ -25,6 +27,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:onClick="backObjective"
-        android:text="Back" />
+        android:text="Back"
+        android:background="@drawable/custom_button"
+        android:textAppearance="@style/PTFont.Dark" />
 
 </RelativeLayout>
