--- a/PT_Assistant/res/layout/activity_trend_chart.xml
+++ b/PT_Assistant/res/layout/activity_trend_chart.xml
@@ -4,5 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.pt_assistant.TrendChartActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame"
+    android:background="@drawable/custom_background" />
 
