--- a/PT_Assistant/res/layout/fragment_create_notes.xml
+++ b/PT_Assistant/res/layout/fragment_create_notes.xml
@@ -6,25 +6,32 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.pt_assistant.CreateNotesActivity$PlaceholderFragment" >
+    tools:context="com.example.pt_assistant.CreateNotesActivity$PlaceholderFragment"
+    android:background="@drawable/custom_background" >
 
     <Button
-        android:id="@+id/buttonNotes"
+        android:id="@+id/buttonGetNotes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="38dp"
-        android:onClick="startNotes"
-        android:text="Go to Patient Notes" />
-
-    <Button
-        android:id="@+id/buttonNotes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonNotes"
         android:layout_alignLeft="@+id/buttonNotes"
+        android:layout_alignRight="@+id/buttonNotes"
+        android:layout_below="@+id/buttonNotes"
+        android:layout_marginTop="@dimen/abc_action_bar_progress_bar_size"
+        android:background="@drawable/custom_button"
         android:onClick="getNotes"
-        android:text="Get Patient Notes" />
+        android:text="Get Previous Notes"
+        android:textAppearance="@style/PTFont.Dark" />
+
+    <Button
+        android:id="@+id/buttonNotes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="127dp"
+        android:background="@drawable/custom_button"
+        android:onClick="startNotes"
+        android:text="Create Patient Notes"
+        android:textAppearance="@style/PTFont.Dark" />
 
 </RelativeLayout>
