--- a/PT_Assistant/res/layout/fragment_get_patient.xml
+++ b/PT_Assistant/res/layout/fragment_get_patient.xml
@@ -1,11 +1,13 @@
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent" 
 	android:layout_height="fill_parent"
-	android:orientation="vertical" >
+	android:orientation="vertical"
+	android:background="@drawable/custom_background" >
 
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
+       android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical" >
 
        <TextView
@@ -13,36 +15,43 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
-           android:textAppearance="?android:attr/textAppearanceSmall" />
+           android:textAppearance="?android:attr/textAppearanceSmall"
+           style="@style/PTFont.Dark" />
 
        <EditText
            android:id="@+id/editname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
-           android:inputType="textPersonName" />
+           android:inputType="textPersonName"
+           style="@style/PTFont.Dark" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
-       android:layout_height="wrap_content" >
+       android:layout_height="wrap_content"
+       android:layout_marginLeft="@dimen/activity_horizontal_margin" >
 
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:text="patient ID"
-           android:textAppearance="?android:attr/textAppearanceSmall" />
+           android:text="Patient ID"
+           android:textAppearance="?android:attr/textAppearanceSmall"
+           style="@style/PTFont.Dark" />
 
        <EditText
            android:id="@+id/editpid"
-           android:layout_width="200dp"
+           style="@style/PTFont.Dark"
+           android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
+
    </LinearLayout>
 
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
+       android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >
 
        <TextView
@@ -50,34 +59,41 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DOB"
-           android:textAppearance="?android:attr/textAppearanceSmall" />
+           android:textAppearance="?android:attr/textAppearanceSmall"
+           style="@style/PTFont.Dark" />
 
        <EditText
            android:id="@+id/editDOB"
-           android:layout_width="236dp"
+           style="@style/PTFont.Dark"
+           android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:inputType="date" />
+
    </LinearLayout>
 
      <LinearLayout
          android:layout_width="wrap_content"
-         android:layout_height="wrap_content" >
+         android:layout_height="wrap_content"
+         android:layout_marginLeft="@dimen/activity_horizontal_margin" >
 
          <TextView
              android:id="@+id/textView5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:text="age"
-             android:textAppearance="?android:attr/textAppearanceSmall" />
+             android:text="Age"
+             android:textAppearance="?android:attr/textAppearanceSmall"
+             style="@style/PTFont.Dark" />
 
          <EditText
              android:id="@+id/editage"
-             android:layout_width="186dp"
+             style="@style/PTFont.Dark"
+             android:layout_width="206dp"
              android:layout_height="wrap_content"
              android:layout_alignLeft="@+id/editDOB"
              android:layout_below="@+id/editDOB"
              android:ems="10"
              android:inputType="number" >
+
          </EditText>
      </LinearLayout>
 
@@ -88,20 +104,23 @@
         <RadioGroup
             android:id="@+id/radGrpSex2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin" >
 
             <RadioButton
                 android:id="@+id/radiomale"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true"
-                android:text="Male" />
+                android:text="Male"
+                style="@style/PTFont.Dark" />
 
             <RadioButton
                 android:id="@+id/radiofem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Female" />
+                android:text="Female"
+                style="@style/PTFont.Dark" />
         </RadioGroup>
     </LinearLayout>
    
@@ -111,35 +130,46 @@
 
         <TextView
             android:id="@+id/textView6"
+            style="@style/PTFont.Dark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="injury code"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:text="Injury code"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <EditText
             android:id="@+id/editinId"
-            android:layout_width="154dp"
+            style="@style/PTFont.Dark"
+            android:layout_width="121dp"
             android:layout_height="wrap_content"
             android:inputType="number" />
+
     </LinearLayout>
     
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent" 
+        android:layout_height="fill_parent"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:orientation="vertical" >
         
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/ptDimens"
+            android:background="@drawable/custom_button"
             android:onClick="updatePatient"
-            android:text="@string/button_update" />
+            android:text="@string/button_update"
+            android:textAppearance="@style/PTFont.Dark" />
 
         <Button
             android:id="@+id/buttonPatientNotes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/ptDimens"
+            android:background="@drawable/custom_button"
             android:onClick="gotoNotes"
-            android:text="Patient Notes" />
+            android:text="Patient Notes"
+            android:textAppearance="@style/PTFont.Dark" />
         
     </LinearLayout>
 
