--- a/PT_Assistant/res/layout/fragment_subjective_notes.xml
+++ b/PT_Assistant/res/layout/fragment_subjective_notes.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.pt_assistant.SubjectiveNotesActivity$PlaceholderFragment" >
+    tools:context="com.example.pt_assistant.SubjectiveNotesActivity$PlaceholderFragment"
+    android:background="@drawable/custom_background" >
 
     <TextView
         android:id="@+id/textViewPastDiag"
@@ -20,7 +21,8 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"
         android:text="Past Diagnoses"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        style="@style/PTFont.Dark" />
 
     <EditText
         android:id="@+id/editMedications"
@@ -28,7 +30,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textViewMedication"
         android:layout_below="@+id/textViewMedication"
-        android:ems="10" />
+        android:ems="10"
+        style="@style/PTFont.Dark" />
 
     <EditText
         android:id="@+id/editPastDiag"
@@ -36,7 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textViewPastDiag"
         android:layout_below="@+id/textViewPastDiag"
-        android:ems="10" />
+        android:ems="10"
+        style="@style/PTFont.Dark" />
 
     <EditText
         android:id="@+id/editOther"
@@ -44,7 +48,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textViewOther"
         android:layout_below="@+id/textViewOther"
-        android:ems="10" >
+        android:ems="10"
+        style="@style/PTFont.Dark" >
 
         <requestFocus />
     </EditText>
@@ -57,7 +62,8 @@
         android:layout_below="@+id/editMedications"
         android:layout_marginTop="20dp"
         android:text="Other"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        style="@style/PTFont.Dark" />
 
     <TextView
         android:id="@+id/textViewMedication"
@@ -67,7 +73,8 @@
         android:layout_below="@+id/editPastDiag"
         android:layout_marginTop="20dp"
         android:text="Medications"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        style="@style/PTFont.Dark" />
 
     <TextView
         android:id="@+id/textViewGoals"
@@ -77,7 +84,8 @@
         android:layout_below="@+id/editOther"
         android:layout_marginTop="45dp"
         android:text="Goals"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        style="@style/PTFont.Dark" />
 
     <EditText
         android:id="@+id/editGoals"
@@ -85,7 +93,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textViewGoals"
         android:layout_below="@+id/textViewGoals"
-        android:ems="10" />
+        android:ems="10"
+        style="@style/PTFont.Dark" />
 
     <TextView
         android:id="@+id/textViewReason"
@@ -95,7 +104,8 @@
         android:layout_below="@+id/editGoals"
         android:layout_marginTop="21dp"
         android:text="Reason"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        style="@style/PTFont.Dark" />
 
     <EditText
         android:id="@+id/editReason"
@@ -103,26 +113,31 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textViewReason"
         android:layout_below="@+id/textViewReason"
-        android:ems="10" />
+        android:ems="10"
+        style="@style/PTFont.Dark" />
 
     <TextView
         android:id="@+id/textViewHistory"
+        style="@style/PTFont.Dark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="Patient History"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textViewObjectives"
+        style="@style/PTFont.Dark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textViewHistory"
         android:layout_below="@+id/editOther"
         android:layout_marginTop="16dp"
         android:text="Patient Objectives"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/buttonNext1"
@@ -132,7 +147,9 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:onClick="setSubjective"
-        android:text="Next" />
+        android:text="Next"
+        android:background="@drawable/custom_button"
+        android:textAppearance="@style/PTFont.Dark" />
 
 </RelativeLayout>
 </ScrollView>
