--- a/PT_Assistant/res/layout/patient_list_view.xml
+++ b/PT_Assistant/res/layout/patient_list_view.xml
@@ -1,12 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/custom_background" >
     
          <ListView
               android:id="@+id/patientlist"
               android:layout_height="wrap_content"
-              android:layout_width="match_parent">
+              android:layout_width="match_parent"
+              style="@style/PTFont.Dark" >
          </ListView>
  
 </RelativeLayout>
