--- a/PT_Assistant/res/values/styles.xml
+++ b/PT_Assistant/res/values/styles.xml
@@ -17,4 +17,20 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="PTFont" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#00FF00</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+    
+    <style name="PTFont.Dark">
+        <item name="android:textColor">#000080</item>
+        <item name="android:textColorHint">#000080</item>
+    </style>
+    
+    <style name="PTFont.Dark.Big">
+        <item name="android:textSize">30sp</item>
+    </style>
+    
 </resources>
